MacViewsBrowser: Never orderOut: the status bubble, nor order it in again.

Doing so requires it to detached and re-attached as a child window of
the browser. Even though the status bubble has
NSWindowCollectionBehaviorTransient, this triggers a space switch due
to rdar://9037452 .

Note the status bubble can still be hidden implicitly in other ways. E.g.
Cmd+h, or miniaturizing the browser window.

Bug: 866760, 31821
Change-Id: Iaf6220bf39bb62cb6002ebd372b96abb10db4f38
Reviewed-on: https://chromium-review.googlesource.com/1155274
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579564}
Former-commit-id: ed7b111010b7f64504b2e874d9f4f6d9db0021fd