chrome/browser/ui/views/status_bubble_views.cc
@@ -159,10 +159,10 @@ class StatusBubbleViews::StatusView : public views::View {
   void SetStyle(BubbleStyle style);
 
   // Show the bubble instantly.
-  void Show();
+  void ShowInstantly();
 
   // Hide the bubble instantly.
-  void Hide();
+  void HideInstantly();
 
   // Resets any timers we have. Typically called when the user moves a
   // mouse.
@@ -251,20 +251,32 @@ void StatusBubbleViews::StatusView::SetText(const base::string16& text,
   }
 }
 
-void StatusBubbleViews::StatusView::Show() {
+void StatusBubbleViews::StatusView::ShowInstantly() {
   animation_->Stop();
   CancelTimer();
   SetOpacity(1.0);
+#if defined(OS_MACOSX)
+  // Don't order an already-visible window on Mac, since that may trigger a
+  // space switch. The window stacking is guaranteed by its child window status.
+  if (!popup_->IsVisible())
+    popup_->ShowInactive();
+#else
   popup_->ShowInactive();
+#endif
   state_ = BUBBLE_SHOWN;
 }
 
-void StatusBubbleViews::StatusView::Hide() {
+void StatusBubbleViews::StatusView::HideInstantly() {
   animation_->Stop();
   CancelTimer();
   SetOpacity(0.0);
   text_.clear();
+#if !defined(OS_MACOSX)
+  // Don't orderOut: the window on macOS. Doing so for a child window requires
+  // it to be detached/reattached, which may trigger a space switch. Instead,
+  // just leave the window fully transparent and unclickable.
   popup_->Hide();
+#endif
   state_ = BUBBLE_HIDDEN;
 }
 
@@ -322,9 +334,8 @@ void StatusBubbleViews::StatusView::StartHiding() {
     state_ = BUBBLE_HIDING_TIMER;
     StartTimer(base::TimeDelta::FromMilliseconds(kHideDelay));
   } else if (state_ == BUBBLE_SHOWING_TIMER) {
-    state_ = BUBBLE_HIDDEN;
-    popup_->Hide();
-    CancelTimer();
+    HideInstantly();
+    DCHECK_EQ(BUBBLE_HIDDEN, state_);
   } else if (state_ == BUBBLE_SHOWING_FADE) {
     state_ = BUBBLE_HIDING_FADE;
     // Figure out where we are in the current fade.
@@ -372,8 +383,8 @@ void StatusBubbleViews::StatusView::SetStyle(BubbleStyle style) {
 
 void StatusBubbleViews::StatusView::OnAnimationEnded() {
   if (state_ == BUBBLE_HIDING_FADE) {
-    state_ = BUBBLE_HIDDEN;
-    popup_->Hide();
+    HideInstantly();
+    DCHECK_EQ(BUBBLE_HIDDEN, state_);
   } else if (state_ == BUBBLE_SHOWING_FADE) {
     state_ = BUBBLE_SHOWN;
   }
@@ -733,7 +744,7 @@ void StatusBubbleViews::SetStatus(const base::string16& status_text) {
   status_text_ = status_text;
   if (!status_text_.empty()) {
     view_->SetText(status_text, true);
-    view_->Show();
+    view_->ShowInstantly();
   } else if (!url_text_.empty()) {
     view_->SetText(url_text_, true);
   } else {
@@ -797,7 +808,7 @@ void StatusBubbleViews::Hide() {
   status_text_ = base::string16();
   url_text_ = base::string16();
   if (view_)
-    view_->Hide();
+    view_->HideInstantly();
 }
 
 void StatusBubbleViews::MouseMoved(bool left_content) {
